--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.3.1",
-    "scheduler": "^0.14.0"
+    "scheduler": "^0.14.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
